<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sustain</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cont">Continue</string>

    <string name="placeholder_text">Placeholder Text</string>

    <string name="edit_message" tools:ignore="UnusedResources">Enter a message</string>
    <string name="edit_email">Email Address</string>
    <string name="edit_password">Password</string>
    <string name="edit_username" tools:ignore="UnusedResources">Username</string>
    <string name="empty_username" tools:ignore="UnusedResources">Please enter a username</string>
    <string name="empty_password" tools:ignore="UnusedResources">Please enter a password</string>
    <string name="button_send" tools:ignore="UnusedResources">Send</string>
    <string name="button_register" tools:ignore="UnusedResources">Register</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile" tools:ignore="UnusedResources">Edit Profile</string>
    <string name="username">Username</string>
    <string name="user_type">Role</string>
    <string name="home_address">Home Address:</string>
    <string name="phones" tools:ignore="UnusedResources">Phone Numbers</string>
    <string name="home" tools:ignore="UnusedResources">Home</string>
    <string name="mobile" tools:ignore="UnusedResources">Mobile</string>
    <string name="title_activity_test" tools:ignore="UnusedResources">TestActivity</string>
    <string name="get_current_location" tools:ignore="UnusedResources">Get My Location</string>
    <string name="login">Log In</string>
    <string name="Register">Register</string>
    <string name="welcome_message">Welcome to Sustain</string>
    <string name="main_screen">Main Screen</string>
    <string name="profile">Profile</string>
    <string name="water_source_reports">Water Source Reports</string>
    <string name="water_purity_reports">Water Purity Reports</string>
    <string name="source_report">Source Report</string>
    <string name="purity_report">Purity Report</string>
    <string name="logout">Log Out</string>
    <string name="map">Map</string>
    <string name="hist_graph">View Historical Graphs</string>
    <string name="historical_view_title" tools:ignore="UnusedResources">Historical Graph</string>
    <string name="select_report_type">Select the report type to view:</string>
    <!--activity_main.xml-->
    <string name="main_page">Sustain Main Page</string>
    <string name="submit_report">Submit Report</string>
    <string name="view_report">View Reports</string>
    <!--activity_get_address.xml-->
    <string name="name_reporter">Reporter Name</string>
    <string name="name">Name:</string>
    <string name="name_place">Name of this place</string>
    <string name="button_description">Gets your current location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="street_address1">Street Address 1</string>
    <string name="street_address2">Street Address 2</string>
    <string name="city">City:</string>
    <string name="state_or_province">State/Province</string>
    <string name="country">Country:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="find_lat_long">Find Latitude/Longitude From Address</string>
    <!--activity_select_historical_data.xml-->
    <string name="select_data_graph">Select Data for Graph</string>
    <string name="location">Location</string>
    <string name="data_type_search">Data Type to Search</string>
    <string name="virus">Virus</string>
    <string name="contaminant">Contaminant</string>
    <string name="year">Year</string>
    <string name="display_graph">Display Graph</string>
    <!--purity_report.xml-->
    <string name="overall_condition">Overall Condition</string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="contaminant_ppm">Contaminant PPM</string>
    <!--source_report.xml-->
    <string name="water_type">Water Type</string>
    <string name="water_condition">Water Condition</string>
    <!--viewwaterreport.xml-->
    <string name="water_report_num" tools:ignore="UnusedResources">Water Report #</string>
    <string name="report_num" tools:ignore="UnusedResources">Report #</string>
    <string name="report_date" tools:ignore="UnusedResources">Report Date</string>
    <string name="report_time" tools:ignore="UnusedResources">Report Time</string>
    <string name="water_info" tools:ignore="UnusedResources">Water Information</string>
    <string name="report_back" tools:ignore="UnusedResources">Back to Reports</string>
    <!--water_report_list_row.xml-->
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="number">Number</string>
</resources>