<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:stretchColumns="1"
    tools:context="com.project.sustain.controllers.EditProfileActivity">
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/username"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPersonName"
            android:gravity="start"
            android:id="@+id/editText_userName"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/user_type"
            android:gravity="start"
            android:textSize="14sp"/>
        <Spinner
            android:id="@+id/spinner_userType"
            android:gravity="start"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/home_address"
            android:gravity="start"
            android:textSize="14sp"/>

    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/street_address1"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editText_street1"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/street_address2"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editText_street2"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/city"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editText_city"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/state_or_province"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editText_state"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/country"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editText_country"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="match_parent">
        <TextView
            android:text="@string/zip_code"
            android:gravity="start"
            android:textSize="14sp"/>
        <EditText
            android:inputType="textPostalAddress"
            android:id="@+id/editText_zipCode"
            android:textSize="14sp"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/cancel"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:id="@+id/buttonCancelProfile"
            style="@android:style/Widget.Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:text="@string/save"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:id="@+id/buttonSaveProfile"
            style="@android:style/Widget.Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"/>
    </TableRow>
</TableLayout>

