<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblReporterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_reporter"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/txtReporterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_place"
            android:inputType="textPersonName" />
        <ImageButton
            android:id="@+id/btnGetMyLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_description"
            app:srcCompat="@android:drawable/ic_menu_mylocation"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="LabelFor" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblStreetAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_address1"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editStreetAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblStreetAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_address2"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editStreetAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_or_province"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblZipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_code"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/editZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGetLatLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_lat_long"/>

    

    <FrameLayout
        android:id="@+id/frameReportType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radReportType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radBtnWaterReport"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:text="@string/source_report"/>

            <RadioButton
                android:id="@+id/radBtnPurityReport"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/purity_report"/>
        </RadioGroup>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cont"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>